# pc_zap_scrapper

./: .bumpversion.cfg  .env.example  .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  tox.ini
docker/: Dockerfile  Dockerfile.jupyter
docs/source/: conf.py  index.rst  intro.rst  modules.rst  usage.rst
docs/source/_files/_modules/mymodule/: hello.rst
notebooks/: _playwright.ipynb  _selenium.py  analise-de-dados.ipynb  example.html  igest_v1.0-to-new-database.ipynb  imoveis.html  modelling-all.ipynb  modelling-houses.ipynb  modelling.ipynb  models.py  neighbor_latlong.parquet  pipeline.ipynb  refact.ipynb  response.json  scrape.py  selenium.ipynb  test.ipynb  v2.0.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
pc_zap_scrapper/: .gitignore  __init__.py  __main__.py  _version.py  utils.py
pc_zap_scrapper/v1/: __init__.py  load.py  utils.py
pc_zap_scrapper/v2/: config.py  database.py  models.py  scrape.py  utils.py
scripts/: build.sh
test/: test.ipynb
